# ad99py

./: .gitignore  README.md  ad99.py  ad99_calibrate.ipynb  ad99_calibrate_cw.ipynb  ad99_introspect.ipynb  ad99_k_spectrum.ipynb  ad99dask.py  ad99vec.py  coarsen_loon.ipynb  constants.py  demo_ad99.ipynb  demo_add99_vectorized.ipynb  environment.yml  era5_calibrate.ipynb  loon_inspect.ipynb  mc_level.ipynb  mima_resolved_spectrum.ipynb  mimaad99.py  noisy_ad99.ipynb  prescribed_profiles.ipynb  pyproject.toml  requirements.txt  resolved_flux.py  run_era5.py  run_era5.sh  run_era5_uw.py  run_era5_uw.sh  transforms.py  validate_ad99.ipynb  worker.sh
.github/workflows/: python-package.yml
dask_slurm_scripts/: worker.sh
notebooks/: ad99_calibrate.ipynb  ad99_calibrate_sherlock.ipynb  ad99_check_c0.ipynb  ad99_introspect.ipynb  ad99_k_spectrum.ipynb  coarsen_loon.ipynb  demo_add99_vectorized.ipynb  era5_calibrate.ipynb  era5_check_resolved.ipynb  era5_coarse_gcp_test.ipynb  era5_histogram.ipynb  inspect_coarse_era5.ipynb  mima_resolved_spectrum.ipynb  noisy_ad99.ipynb  prescribed_profiles.ipynb  validate_ad99.ipynb  visualize_calibration.ipynb
notebooks/final/: calibrate.ipynb  demo_profiles.ipynb  era5_compute_fluxes.ipynb  era5_compute_fluxes_2014.ipynb  flux_distributions.ipynb  gcm_compute_fluxes.ipynb  inspect_fields.ipynb  remaining_flux.ipynb  source_level_data.ipynb
src/ad99py/: __init__.py  (+10 more)
src/ad99py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_ad99.py  test_constants.py  test_masks.py  test_sources.py  test_variables.py
